# vm-design

./: .gitignore
Assignment01/: CMakeLists.txt
Assignment01/src/: main.cpp
Assignment02/: CMakeLists.txt  README.md  run_tests.sh
Assignment02/src/: bytefile.cpp  bytefile.h  byterun_interface.h  file_reader.cpp  file_reader.h  interpreter.cpp  interpreter.h  main.cpp  runtime_interface.h  stack.h
Assignment03/: CMakeLists.txt  run_tests.sh
Assignment03/src/: bytefile.cpp  bytefile.h  byterun_interface.h  file_reader.cpp  file_reader.h  idiom_analyzer.cpp  idiom_analyzer.h  main.cpp
Assignment04/: CMakeLists.txt  README.md  run_tests.sh
Assignment04/src/: bytefile.cpp  bytefile.h  file_reader.cpp  file_reader.h  interpreter.cpp  interpreter.h  main.cpp  stack.h  verifier.cpp  verifier.h
Assignment05/: .gitignore  README.md  build.gradle  run_tests.sh  settings.gradle
Assignment05/gradle/wrapper/: gradle-wrapper.properties
Assignment05/src/main/antlr/: Lama.g4  LamaLexer.g4
Assignment05/src/main/java/io/github/dtolmachev/: LamaException.java  LamaFileDetector.java  LamaLanguage.java
Assignment05/src/main/java/io/github/dtolmachev/builtins/: LamaBuiltinNode.java  LamaEvalBuiltin.java  LamaLengthBuiltin.java  LamaPrintlnBuiltin.java  LamaReadBuiltin.java  LamaStringBuiltin.java  LamaWriteBuiltin.java
Assignment05/src/main/java/io/github/dtolmachev/launcher/: LamaMain.java
Assignment05/src/main/java/io/github/dtolmachev/nodes/: LamaAstRootNode.java  LamaBinaryNode.java  LamaExpressionNode.java  LamaNode.java  LamaNullNode.java  LamaRootNode.java  LamaSequenceNode.java  LamaTypes.java
Assignment05/src/main/java/io/github/dtolmachev/nodes/argument/: LamaLoadArgumentNode.java
Assignment05/src/main/java/io/github/dtolmachev/nodes/capture/: LamaLoadCaptureNode.java  LamaStoreCaptureNode.java
Assignment05/src/main/java/io/github/dtolmachev/nodes/controlflow/: LamaCaseNode.java  LamaDoWhileNode.java  LamaForNode.java  LamaIfNode.java  LamaLetNode.java  LamaWhileDoNode.java
Assignment05/src/main/java/io/github/dtolmachev/nodes/expression/: LamaAddNode.java  LamaArrayLiteralNode.java  LamaCallNode.java  LamaDivNode.java  LamaEqualNode.java  LamaFunctionNode.java  LamaGreaterNode.java  LamaGreaterOrEqualNode.java  LamaIntegerLiteralNode.java  LamaLessNode.java  LamaLessOrEqualNode.java  LamaLogicalAndNode.java  LamaLogicalOrNode.java  LamaModNode.java  LamaMulNode.java  LamaNegNode.java  LamaNotEqualNode.java  LamaSExpressionLiteralNode.java  LamaStringLiteralNode.java  LamaSubNode.java
Assignment05/src/main/java/io/github/dtolmachev/nodes/global/: LamaLoadGlobalNode.java
Assignment05/src/main/java/io/github/dtolmachev/nodes/local/: LamaLoadLocalNode.java  LamaLoadSubscriptNode.java  LamaStoreLocalNode.java  LamaStoreMaterializedFrameLocalNode.java  LamaStoreSubscriptNode.java
Assignment05/src/main/java/io/github/dtolmachev/nodes/pattern/: LamaArrayLiteralPatternNode.java  LamaIntegerLiteralPatternNode.java  LamaIsArrayPatternNode.java  LamaIsBoxPatternNode.java  LamaIsFunctionPatternNode.java  LamaIsSExpressionPatternNode.java  LamaIsStringPatternNode.java  LamaIsValPatternNode.java  LamaNameReferencePatternNode.java  LamaNullPatternNode.java  LamaPatternNode.java  LamaSExpressionLiteralPatternNode.java  LamaStringLiteralPatternNode.java  LamaWildcardPatternNode.java
Assignment05/src/main/java/io/github/dtolmachev/parser/: LamaBaseParser.java  LamaNodeParser.java  LamaParseError.java
Assignment05/src/main/java/io/github/dtolmachev/runtime/: LamaArray.java  LamaContext.java  LamaFunction.java  LamaNull.java  LamaSExpression.java  LamaString.java
Assignment06/: CMakeLists.txt
Assignment06/memory_pool/: test.cpp
Assignment06/src/: pool.cpp  pool.h  sigsegv_handler.cpp  sigsegv_handler.h
Assignment07/: CMakeLists.txt
Assignment07/memory_pool/: test.cpp
Assignment07/src/: pool.cpp  pool.h  pool_registry.cpp  pool_registry.h  sigsegv_handler.cpp  sigsegv_handler.h
Assignment08/: CMakeLists.txt
Assignment08/src/: main.cpp  string_ptr.cpp  string_ptr.h
Assignment09/: CMakeLists.txt
Assignment09/src/: main.cpp  safe_read_uint8.cpp  safe_read_uint8.h
Assignment10/: CMakeLists.txt
Assignment10/src/: bounded_deque.h  main.cpp  parallel_memcpy.cpp  parallel_memcpy.h  thread_pool.h
byterun/: byterun.c
memory_pool/: test.cpp
runtime/: runtime.c
(+3 files in other folders)
